fix creature class and bug fix